<resources>
    <string name="app_name">Fate</string>
    <string name="example_desc">Synopsis: You meet the love of your life one way or other</string>
    <string name="example_genre">Genre: Romance</string>
    <string name="example_title">Title: An Unexpected Encounter</string>
    <string name="example_img">Two people in a heart</string>
    <string name="example_completion">Completion: 0%</string>
    <string name="story_title">%1$s</string>
    <string name="story_genre">Genre: %1$s</string>
    <string name="story_desc">Synopsis: %1$s</string>
    <string name="story_completion">Completion: %1$s%%</string>
    <string name="continue_button">Continue</string>
    <string name="instructions">INSTRUCTIONS</string>
    <string name="start">START</string>
    <string name="app_name_capitalized">FATE</string>
    <string name="sign_post_desc">A sign post with two signs pointing in opposite directions</string>

    <string name="instructions_text">Hello fellow traveler,\n
        Welcome to Fate, an interactive app that
        allows you to take control of your own journey. First you choose a story to get started. As
        you move along the story you will occasionally be presented with choices and you can click
        on the corresponding buttons to make your choice. If it is too hard to make a choice, you can use
        our coin flip tool (shown below) to make a decision! These decisions determine your end
        destination. Immerse yourself into a world of wonder.\n
        Good luck and take care, The Creator</string>

</resources>